--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,7 +22,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           
       - name: Build the Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/{{ secrets.IMAGE_NAME }} .
+        run: docker build . -t ${{ secrets.DOCKER_USERNAME }}/{{ secrets.IMAGE_NAME }}
 
       - name: Push the Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/{{ secrets.IMAGE_NAME }}
