--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,9 +20,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
           
       - name: Build the Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/{{ secrets.IMAGE_NAME }} .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }} .
+        # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
       - name: Push the Docker image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/{{ secrets.IMAGE_NAME }}
