--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,5 +27,5 @@ jobs:
         # run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
 
       - name: Push the Docker image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/{{ secrets.IMAGE_NAME }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.IMAGE_NAME }}
       
